# skin_lesion_classifier

./: .gitignore  README.md  RESEARCH_LOG.md  pyproject.toml
src/: data_split.py  dataset.py  download_data.py  evaluate.py  explore_data.py  model.py  train.py
